# ourafy

./: README.md  apps.txt  auth.py  check.py  close.py  daemon.py  focus.py  formulas.md  ourafy.db  pyproject.toml  scoring.py  user_data.json
backend/: .gitignore  README.md  aura-fi_en_mac_v4_0_0.ppn  check.py  close.py  config.py  daemon.py  db.py  focus.py  ourafy.db  pyproject.toml  scoring.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/api/: lockinOptions.ts  ouraSnapshot.ts
frontend/src/components/lockin/: StepRail.tsx
frontend/src/components/oura/: BioSnapshot.tsx
frontend/src/components/ui/: skeleton.tsx  textarea.tsx
frontend/src/features/audio/: beeps.ts
frontend/src/features/lockin/: mock.ts  types.ts
frontend/src/features/oura/: demo.ts  types.ts
frontend/src/features/pomodoro/: usePomodoroMachine.ts
frontend/src/pages/: LockIn.tsx  Plan.tsx  Pomodoro.tsx  Snapshot.tsx
old_code/: auth.py
