[project]
name = "ourafy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "openai>=2.24.0",
    "pvporcupine>=4.0.2",
    "pvrecorder>=1.2.7",
    "requests>=2.32.5",
]
